--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20",
+    "prettier-plugin-prisma": "^4.10.0",
     "prisma": "^4.10.1"
   },
   "dependencies": {
