--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20",
     "prettier-plugin-prisma": "^4.10.0",
