--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
+    "react-error-overlay": "^6.0.9",
     "vite": "^4.1.0"
   }
 }
